syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.adapter.eth";
option java_outer_classname = "EthAdapterProto";

package ethAdapter;

// The common service definition.
service Common {
  // Sends a greeting
  rpc GasPrice (GasPriceRequest) returns (GasPriceReply) {}
}

// The request message containing the user's name.
message GasPriceRequest {

}

// The response message containing the greetings
message GasPriceReply {
  string gasPrice = 1;
}